--- a/Master.tex
+++ b/Master.tex
@@ -1313,7 +1313,7 @@ We designed a small Monte Carlo study to investigate the coverage probability of
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
 
-\includegraphics[width=\maxwidth]{figure/sine-wave} \caption[Scaled sine wave example]{Scaled sine wave function.\label{fig:sine-wave}}
+\includegraphics[width=\maxwidth]{figure/sine-wave} \caption[Scaled sine wave function]{Scaled sine wave function.\label{fig:sine-wave}}
 \end{figure}
 
 
@@ -1467,7 +1467,7 @@ where $K$ is the number of knots or random effects (see Section~\ref{sec:conditi
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
 
-\includegraphics[width=\maxwidth]{figure/elisa-scatter} \caption[ELISA data]{ELISA data.\label{fig:elisa-scatter}}
+\includegraphics[width=\maxwidth]{figure/elisa-scatter} \caption[Scatterplot of the ELISA data]{Scatterplot of the ELISA data.\label{fig:elisa-scatter}}
 \end{figure}
 
 
